fixed error on mobile

--- a/src/sass/about-me.scss
+++ b/src/sass/about-me.scss
@@ -13,9 +13,9 @@
   }
 
   .hero-body .container .is-size-2-desktop {
-  	font-size: 2.5em !important;
-  	color: $darkred !important;
-  	opacity: 0.75;
+    // font-size: 2.5em !important;
+    color: $darkred !important;
+    opacity: 0.75;
   }
 
   .hero-body #buttonHolder {
